# ThemeSwitch

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Settings.cpp  Settings.h  ThemeToggle.cpp  ThemeToggle.h  TrayIcon.cpp  TrayIcon.h  build.bat  build_mingw.bat  build_simple.sh  build_with_hotkey.sh  main.cpp  toggle-theme.sh
resources/linux/: resources.qrc  themeswitch.desktop
resources/windows/: resource.h  resource.rc
src/: Application.cpp  Application.h  main.cpp
src/common/: IHotkeyManager.h  ISettings.h  IThemeController.h  ITrayIcon.h
src/platform/linux/: LinuxHotkeyManager.cpp  LinuxHotkeyManager.h  LinuxSettings.cpp  LinuxSettings.h  LinuxThemeController.cpp  LinuxThemeController.h  LinuxTrayIcon.cpp  LinuxTrayIcon.h  SettingsDialog.cpp  SettingsDialog.h  SimpleHotkeyManager.h
src/platform/windows/: WindowsHotkeyManager.cpp  WindowsHotkeyManager.h  WindowsSettings.cpp  WindowsSettings.h  WindowsThemeController.cpp  WindowsThemeController.h  WindowsTrayIcon.cpp  WindowsTrayIcon.h
